Changed to use Java 7 compatible Base64 class