@@ -8,18 +8,18 @@ package uk.org.cambsfire.security;
  * %%
  * Redistribution and use in source and binary forms, with or without modification,
  * are permitted provided that the following conditions are met:
- *
+ * 
  * 1. Redistributions of source code must retain the above copyright notice, this
  *    list of conditions and the following disclaimer.
- *
+ * 
  * 2. Redistributions in binary form must reproduce the above copyright notice,
  *    this list of conditions and the following disclaimer in the documentation
  *    and/or other materials provided with the distribution.
- *
+ * 
  * 3. Neither the name of the Cambridgeshire Fire and Rescue Service nor the names of its contributors
  *    may be used to endorse or promote products derived from this software without
  *    specific prior written permission.
- *
+ * 
  * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
  * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
  * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
@@ -33,9 +33,8 @@ package uk.org.cambsfire.security;
  * #L%
  */
 
-import java.util.Base64;
-import java.util.Base64.Decoder;
-import java.util.Base64.Encoder;
+
+import javax.xml.bind.DatatypeConverter;
 
 @SuppressWarnings({ "PMD.MethodReturnsInternalArray", "PMD.ArrayIsStoredDirectly" })
 public class EncodedPassword {
@@ -78,26 +77,25 @@ public class EncodedPassword {
             final String b64Salt = encodedPasswordString.substring(0, indexOfEndOfSalt);
             final String hexIterations = encodedPasswordString.substring(indexOfEndOfSalt + 1, indexOfEndOfIterations);
             final String b64EncodedPassword = encodedPasswordString.substring(indexOfEndOfIterations + 1);
-            final Decoder base64Decoder = Base64.getDecoder();
 
-            return new EncodedPassword(base64Decoder.decode(b64Salt),
+            return new EncodedPassword(DatatypeConverter.parseBase64Binary(b64Salt),
                     Integer.parseInt(hexIterations, HEX_RADIX),
-                    base64Decoder.decode(b64EncodedPassword));
+                    DatatypeConverter.parseBase64Binary(b64EncodedPassword));
         } catch (final IndexOutOfBoundsException | NumberFormatException e) {
             throw new EncodedPasswordException("Unable to read encoded password: " + encodedPasswordString, e);
         }
     }
 
     public String asEncodedString() {
-        final Encoder base64Encoder = Base64.getEncoder();
-        final String base64Salt = base64Encoder.encodeToString(salt);
+        final String base64Salt = DatatypeConverter.printBase64Binary(salt);
         final String hexIterations = Integer.toHexString(numIterations);
+        final String b64PasswordHash = DatatypeConverter.printBase64Binary(passwordHash);
         return new StringBuilder(MAX_ENCODED_PASSWORD_CHARS)
                 .append(base64Salt)
                 .append(ENCODED_VALUE_DELIMITER)
                 .append(hexIterations)
                 .append(ENCODED_VALUE_DELIMITER)
-                .append(base64Encoder.encodeToString(passwordHash))
+                .append(b64PasswordHash)
                 .toString();
 
     }
